# hacq

./: .gitattributes  .gitignore  LICENSE  hacq.cabal  readme.txt  sqct.in
doc/: TIalpha.bst  hacq.bib  hacq.tex
examples/: adder.hs  controls.hs  ctrl-cnotWires.hs  examples.cabal  grover.hs  parallel.hs  with.hs
examples/fourier/: CommandLine.hs  Main.hs
sqdb/out03/: RZ1d1024-0.qc  RZ1d1024-1.qc  RZ1d1024-2.qc  RZ1d1024-3.qc  RZ1d128-0.qc  RZ1d128-1.qc  RZ1d128-2.qc  RZ1d128-3.qc  RZ1d131072-0.qc  RZ1d131072-1.qc  RZ1d131072-2.qc  RZ1d131072-3.qc  RZ1d16-0.qc  RZ1d16-1.qc  RZ1d16-2.qc  RZ1d16-3.qc  RZ1d16384-0.qc  RZ1d16384-1.qc  RZ1d16384-2.qc  RZ1d16384-3.qc  RZ1d2048-0.qc  RZ1d2048-1.qc  RZ1d2048-2.qc  RZ1d2048-3.qc  RZ1d256-0.qc  RZ1d256-1.qc  RZ1d256-2.qc  RZ1d256-3.qc  RZ1d32-0.qc  RZ1d32-1.qc  RZ1d32-2.qc  RZ1d32-3.qc  RZ1d32768-0.qc  RZ1d32768-1.qc  RZ1d32768-2.qc  RZ1d32768-3.qc  RZ1d4096-0.qc  RZ1d4096-1.qc  RZ1d4096-2.qc  RZ1d4096-3.qc  (+16 more)
sqdb/out04/: RZ1d1024-0.qc  RZ1d1024-1.qc  RZ1d1024-2.qc  RZ1d1024-3.qc  RZ1d128-0.qc  RZ1d128-1.qc  RZ1d128-2.qc  RZ1d128-3.qc  RZ1d131072-0.qc  RZ1d131072-1.qc  RZ1d131072-2.qc  RZ1d131072-3.qc  RZ1d16-0.qc  RZ1d16-1.qc  RZ1d16-2.qc  RZ1d16-3.qc  RZ1d16384-0.qc  RZ1d16384-1.qc  RZ1d16384-2.qc  RZ1d16384-3.qc  RZ1d2048-0.qc  RZ1d2048-1.qc  RZ1d2048-2.qc  RZ1d2048-3.qc  RZ1d256-0.qc  RZ1d256-1.qc  RZ1d256-2.qc  RZ1d256-3.qc  RZ1d32-0.qc  RZ1d32-1.qc  RZ1d32-2.qc  RZ1d32-3.qc  RZ1d32768-0.qc  RZ1d32768-1.qc  RZ1d32768-2.qc  RZ1d32768-3.qc  RZ1d4096-0.qc  RZ1d4096-1.qc  RZ1d4096-2.qc  RZ1d4096-3.qc  (+16 more)
sqdb/out05/: RZ1d1024-0.qc  RZ1d1024-1.qc  RZ1d1024-2.qc  RZ1d1024-3.qc  RZ1d128-0.qc  RZ1d128-1.qc  RZ1d128-2.qc  RZ1d128-3.qc  RZ1d131072-0.qc  RZ1d131072-1.qc  RZ1d131072-2.qc  RZ1d131072-3.qc  RZ1d16-0.qc  RZ1d16-1.qc  RZ1d16-2.qc  RZ1d16-3.qc  RZ1d16384-0.qc  RZ1d16384-1.qc  RZ1d16384-2.qc  RZ1d16384-3.qc  RZ1d2048-0.qc  RZ1d2048-1.qc  RZ1d2048-2.qc  RZ1d2048-3.qc  RZ1d256-0.qc  RZ1d256-1.qc  RZ1d256-2.qc  RZ1d256-3.qc  RZ1d32-0.qc  RZ1d32-1.qc  RZ1d32-2.qc  RZ1d32-3.qc  RZ1d32768-0.qc  RZ1d32768-1.qc  RZ1d32768-2.qc  RZ1d32768-3.qc  RZ1d4096-0.qc  RZ1d4096-1.qc  RZ1d4096-2.qc  RZ1d4096-3.qc  (+16 more)
sqdb/out06/: RZ1d1024-0.qc  RZ1d1024-1.qc  RZ1d1024-2.qc  RZ1d1024-3.qc  RZ1d128-0.qc  RZ1d128-1.qc  RZ1d128-2.qc  RZ1d128-3.qc  RZ1d131072-0.qc  RZ1d131072-1.qc  RZ1d131072-2.qc  RZ1d131072-3.qc  RZ1d16-0.qc  RZ1d16-1.qc  RZ1d16-2.qc  RZ1d16-3.qc  RZ1d16384-0.qc  RZ1d16384-1.qc  RZ1d16384-2.qc  RZ1d16384-3.qc  RZ1d2048-0.qc  RZ1d2048-1.qc  RZ1d2048-2.qc  RZ1d2048-3.qc  RZ1d256-0.qc  RZ1d256-1.qc  RZ1d256-2.qc  RZ1d256-3.qc  RZ1d32-0.qc  RZ1d32-1.qc  RZ1d32-2.qc  RZ1d32-3.qc  RZ1d32768-0.qc  RZ1d32768-1.qc  RZ1d32768-2.qc  RZ1d32768-3.qc  RZ1d4096-0.qc  RZ1d4096-1.qc  RZ1d4096-2.qc  RZ1d4096-3.qc  (+16 more)
sqdb/out07/: RZ1d1024-0.qc  RZ1d1024-1.qc  RZ1d1024-2.qc  RZ1d1024-3.qc  RZ1d128-0.qc  RZ1d128-1.qc  RZ1d128-2.qc  RZ1d128-3.qc  RZ1d131072-0.qc  RZ1d131072-1.qc  RZ1d131072-2.qc  RZ1d131072-3.qc  RZ1d16-0.qc  RZ1d16-1.qc  RZ1d16-2.qc  RZ1d16-3.qc  RZ1d16384-0.qc  RZ1d16384-1.qc  RZ1d16384-2.qc  RZ1d16384-3.qc  RZ1d2048-0.qc  RZ1d2048-1.qc  RZ1d2048-2.qc  RZ1d2048-3.qc  RZ1d256-0.qc  RZ1d256-1.qc  RZ1d256-2.qc  RZ1d256-3.qc  RZ1d32-0.qc  RZ1d32-1.qc  RZ1d32-2.qc  RZ1d32-3.qc  RZ1d32768-0.qc  RZ1d32768-1.qc  RZ1d32768-2.qc  RZ1d32768-3.qc  RZ1d4096-0.qc  RZ1d4096-1.qc  RZ1d4096-2.qc  RZ1d4096-3.qc  (+15 more)
sqdb/out08/: RZ1d1024-0.qc  RZ1d1024-1.qc  RZ1d1024-2.qc  RZ1d1024-3.qc  RZ1d128-0.qc  RZ1d128-1.qc  RZ1d128-2.qc  RZ1d128-3.qc  RZ1d131072-0.qc  RZ1d131072-1.qc  RZ1d131072-2.qc  RZ1d131072-3.qc  RZ1d16-0.qc  RZ1d16-1.qc  RZ1d16-2.qc  RZ1d16-3.qc  RZ1d16384-0.qc  RZ1d16384-1.qc  RZ1d16384-2.qc  RZ1d16384-3.qc  RZ1d2048-0.qc  RZ1d2048-1.qc  RZ1d2048-2.qc  RZ1d2048-3.qc  RZ1d256-0.qc  RZ1d256-1.qc  RZ1d256-2.qc  RZ1d256-3.qc  RZ1d32-0.qc  RZ1d32-1.qc  RZ1d32-2.qc  RZ1d32-3.qc  RZ1d32768-0.qc  RZ1d32768-1.qc  RZ1d32768-2.qc  RZ1d32768-3.qc  RZ1d4096-0.qc  RZ1d4096-1.qc  RZ1d4096-2.qc  RZ1d4096-3.qc  (+16 more)
sqdb/out09/: RZ1d1024-0.qc  RZ1d1024-1.qc  RZ1d1024-2.qc  RZ1d1024-3.qc  RZ1d128-0.qc  RZ1d128-1.qc  RZ1d128-2.qc  RZ1d128-3.qc  RZ1d131072-0.qc  RZ1d131072-1.qc  RZ1d131072-2.qc  RZ1d131072-3.qc  RZ1d16-0.qc  RZ1d16-1.qc  RZ1d16-2.qc  RZ1d16-3.qc  RZ1d16384-0.qc  RZ1d16384-1.qc  RZ1d16384-2.qc  RZ1d16384-3.qc  RZ1d2048-0.qc  RZ1d2048-1.qc  RZ1d2048-2.qc  RZ1d2048-3.qc  RZ1d256-0.qc  RZ1d256-1.qc  RZ1d256-2.qc  RZ1d256-3.qc  RZ1d32-0.qc  RZ1d32-1.qc  RZ1d32-2.qc  RZ1d32-3.qc  RZ1d32768-0.qc  RZ1d32768-1.qc  RZ1d32768-2.qc  RZ1d32768-3.qc  RZ1d4096-0.qc  RZ1d4096-1.qc  RZ1d4096-2.qc  RZ1d4096-3.qc  (+16 more)
sqdb/out10/: RZ1d1024-0.qc  RZ1d1024-1.qc  RZ1d1024-2.qc  RZ1d1024-3.qc  RZ1d128-0.qc  RZ1d128-1.qc  RZ1d128-2.qc  RZ1d128-3.qc  RZ1d131072-0.qc  RZ1d131072-1.qc  RZ1d131072-2.qc  RZ1d131072-3.qc  RZ1d16-0.qc  RZ1d16-1.qc  RZ1d16-2.qc  RZ1d16-3.qc  RZ1d16384-0.qc  RZ1d16384-1.qc  RZ1d16384-2.qc  RZ1d16384-3.qc  RZ1d2048-0.qc  RZ1d2048-1.qc  RZ1d2048-2.qc  RZ1d2048-3.qc  RZ1d256-0.qc  RZ1d256-1.qc  RZ1d256-2.qc  RZ1d256-3.qc  RZ1d32-0.qc  RZ1d32-1.qc  RZ1d32-2.qc  RZ1d32-3.qc  RZ1d32768-0.qc  RZ1d32768-1.qc  RZ1d32768-2.qc  RZ1d32768-3.qc  RZ1d4096-0.qc  RZ1d4096-1.qc  RZ1d4096-2.qc  RZ1d4096-3.qc  (+16 more)
sqdb/out11/: RZ1d1024-0.qc  RZ1d1024-1.qc  RZ1d1024-2.qc  RZ1d1024-3.qc  RZ1d128-0.qc  RZ1d128-1.qc  RZ1d128-2.qc  RZ1d128-3.qc  RZ1d131072-0.qc  RZ1d131072-1.qc  RZ1d131072-2.qc  RZ1d131072-3.qc  RZ1d16-0.qc  RZ1d16-1.qc  RZ1d16-2.qc  RZ1d16-3.qc  RZ1d16384-0.qc  RZ1d16384-1.qc  RZ1d16384-2.qc  RZ1d16384-3.qc  RZ1d2048-0.qc  RZ1d2048-1.qc  RZ1d2048-2.qc  RZ1d2048-3.qc  RZ1d256-0.qc  RZ1d256-1.qc  RZ1d256-2.qc  RZ1d256-3.qc  RZ1d32-0.qc  RZ1d32-1.qc  RZ1d32-2.qc  RZ1d32-3.qc  RZ1d32768-0.qc  RZ1d32768-1.qc  RZ1d32768-2.qc  RZ1d32768-3.qc  RZ1d4096-0.qc  RZ1d4096-1.qc  RZ1d4096-2.qc  RZ1d4096-3.qc  (+16 more)
sqdb/out12/: RZ1d1024-0.qc  RZ1d1024-1.qc  RZ1d1024-2.qc  RZ1d1024-3.qc  RZ1d128-0.qc  RZ1d128-1.qc  RZ1d128-2.qc  RZ1d128-3.qc  RZ1d131072-0.qc  RZ1d131072-1.qc  RZ1d131072-2.qc  RZ1d131072-3.qc  RZ1d16-0.qc  RZ1d16-1.qc  RZ1d16-2.qc  RZ1d16-3.qc  RZ1d16384-0.qc  (+39 more)
src/: Util.hs
(+1064 files in other folders)
