name:           examples
version:        0.1
cabal-version:  >= 1.10
build-type:     Simple
author:         Tsuyoshi Ito
synopsis:       Monadic combinators for quantum circuits
license:        BSD3
license-file:   LICENSE
copyright:      Copyright (c) 2013 NEC Laboratories America, Inc.

executable adder
  hs-source-dirs:    .
  main-is:           adder.hs
  default-language:  Haskell2010
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   unordered-containers,
                   hashable,
                   fingertree,
                   bytestring,
                   blaze-builder,
                   hashtables,
                   directory,
                   filepath,
                   hacq
  other-extensions:
                   MultiParamTypeClasses,
                   FunctionalDependencies,
                   FlexibleContexts,
                   FlexibleInstances,
                   StandaloneDeriving,
                   GeneralizedNewtypeDeriving,
                   DeriveFunctor,
                   DeriveFoldable,
                   DeriveTraversable,
                   UndecidableInstances
  ghc-options:       -Wall -rtsopts -fno-ignore-asserts
  ghc-prof-options:  -fprof-auto

executable controls
  hs-source-dirs:    .
  main-is:           controls.hs
  default-language:  Haskell2010
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   unordered-containers,
                   hashable,
                   fingertree,
                   bytestring,
                   blaze-builder,
                   hashtables,
                   directory,
                   filepath,
                   hacq
  other-extensions:
                   MultiParamTypeClasses,
                   FunctionalDependencies,
                   FlexibleContexts,
                   FlexibleInstances,
                   StandaloneDeriving,
                   GeneralizedNewtypeDeriving,
                   DeriveFunctor,
                   DeriveFoldable,
                   DeriveTraversable,
                   UndecidableInstances
  ghc-options:       -Wall -rtsopts -fno-ignore-asserts
  ghc-prof-options:  -fprof-auto

executable with
  hs-source-dirs:    .
  main-is:           with.hs
  default-language:  Haskell2010
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   unordered-containers,
                   hashable,
                   fingertree,
                   bytestring,
                   blaze-builder,
                   hashtables,
                   directory,
                   filepath,
                   hacq
  other-extensions:
                   MultiParamTypeClasses,
                   FunctionalDependencies,
                   FlexibleContexts,
                   FlexibleInstances,
                   StandaloneDeriving,
                   GeneralizedNewtypeDeriving,
                   DeriveFunctor,
                   DeriveFoldable,
                   DeriveTraversable,
                   UndecidableInstances
  ghc-options:       -Wall -rtsopts -fno-ignore-asserts
  ghc-prof-options:  -fprof-auto

executable parallel
  hs-source-dirs:    .
  main-is:           parallel.hs
  default-language:  Haskell2010
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   unordered-containers,
                   hashable,
                   fingertree,
                   bytestring,
                   blaze-builder,
                   hashtables,
                   directory,
                   filepath,
                   hacq
  other-extensions:
                   MultiParamTypeClasses,
                   FunctionalDependencies,
                   FlexibleContexts,
                   FlexibleInstances,
                   StandaloneDeriving,
                   GeneralizedNewtypeDeriving,
                   DeriveFunctor,
                   DeriveFoldable,
                   DeriveTraversable,
                   UndecidableInstances
  ghc-options:       -Wall -rtsopts -fno-ignore-asserts
  ghc-prof-options:  -fprof-auto

executable ctrl-cnotWires
  hs-source-dirs:    .
  main-is:           ctrl-cnotWires.hs
  default-language:  Haskell2010
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   unordered-containers,
                   hashable,
                   fingertree,
                   bytestring,
                   blaze-builder,
                   hashtables,
                   directory,
                   filepath,
                   hacq
  other-extensions:
                   MultiParamTypeClasses,
                   FunctionalDependencies,
                   FlexibleContexts,
                   FlexibleInstances,
                   StandaloneDeriving,
                   GeneralizedNewtypeDeriving,
                   DeriveFunctor,
                   DeriveFoldable,
                   DeriveTraversable,
                   UndecidableInstances
  ghc-options:       -Wall -rtsopts -fno-ignore-asserts
  ghc-prof-options:  -fprof-auto

executable grover
  hs-source-dirs:    .
  main-is:           grover.hs
  default-language:  Haskell2010
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   unordered-containers,
                   hashable,
                   fingertree,
                   bytestring,
                   blaze-builder,
                   hashtables,
                   directory,
                   filepath,
                   hacq
  other-extensions:
                   MultiParamTypeClasses,
                   FunctionalDependencies,
                   FlexibleContexts,
                   FlexibleInstances,
                   StandaloneDeriving,
                   GeneralizedNewtypeDeriving,
                   DeriveFunctor,
                   DeriveFoldable,
                   DeriveTraversable,
                   UndecidableInstances
  ghc-options:       -Wall -rtsopts -fno-ignore-asserts
  ghc-prof-options:  -fprof-auto

executable fourier
  hs-source-dirs:    fourier
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   unordered-containers,
                   hashable,
                   fingertree,
                   bytestring,
                   blaze-builder,
                   hashtables,
                   directory,
                   filepath,
                   hacq
  other-extensions:
                   MultiParamTypeClasses,
                   FunctionalDependencies,
                   FlexibleContexts,
                   FlexibleInstances,
                   StandaloneDeriving,
                   GeneralizedNewtypeDeriving,
                   DeriveFunctor,
                   DeriveFoldable,
                   DeriveTraversable,
                   UndecidableInstances
  ghc-options:       -Wall -rtsopts -fno-ignore-asserts
  ghc-prof-options:  -fprof-auto
  other-modules:
                   CommandLine,
                   Util
